revise padding on list items to fix shifting content

--- a/base.css
+++ b/base.css
@@ -4,6 +4,6 @@
 
 body {
   background-size: cover;
-  background-color: rgba(255, 255, 255, .9);
+  background-repeat: no-repeat;
   background-image: url(http://seattlehappytails.com/wp-content/uploads/2016/05/seattle_skyline_trans.png);
 }
